# Textbook_hackhathon

./: .gitignore  CLAUDE.md  CLAUDE.md.backup  QUICKSTART.md  README.md  STATUS_REPORT.md  prompt-02-rag-chatbot.md  prompt-constitution.md  prompt-plan.md  requirements.md
.github/: copilot-instructions.md
book/: .env.example  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  README.md  components.json  docusaurus.config.ts  jest.config.js  package-lock.json  package.json  sidebars.ts  tsconfig.json
rag-chatbot-backend/: .dockerignore  .env.example  Dockerfile  INFRASTRUCTURE_SETUP.md  README.md  TECHNICAL_OVERVIEW.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run_migrations.py  test_auth.py
rag-chatbot-backend/app/: __init__.py  config.py  database.py  dependencies.py  gemini_client.py  main.py  qdrant_client.py
rag-chatbot-backend/app/api/: __init__.py  auth.py  chat.py  health.py
rag-chatbot-backend/app/middleware/: __init__.py  logging.py
rag-chatbot-backend/app/models/: auth.py  auth_models.py  schemas.py
rag-chatbot-backend/app/repositories/: auth_repository.py
rag-chatbot-backend/app/services/: auth_service.py  ingestion.py  jwt_service.py  password_service.py  rag.py
rag-chatbot-backend/migrations/: 000_reset_and_create_clean_schema.sql  001_create_users.sql  001_guest_only_schema.sql  002_auth_tables.sql  002_create_sessions.sql  003_create_messages.sql  004_create_feedback.sql  005_add_jwt_auth_fields.sql
rag-chatbot-backend/scripts/: ingest_textbook.py  parse_mdx.py  run_migration.py  run_migrations.py
(+210 files in other folders)
